tests/neg/i18678b.scala
class String

def s: String = "" // error